--- a/assignment/index.html
+++ b/assignment/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Week 5 Assignment</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
     <header>
@@ -14,8 +14,5 @@
     <p>See console for output.</p>
   </main>
     <!-- Create an unordered list with any questions you have -->
-    <ul>
-      <li></li>
-    </ul>
   </body>
 </html>
